--- a/templates/chats/index.html
+++ b/templates/chats/index.html
@@ -1,4 +1,4 @@
-{{define "chat/index"}}
+{{define "chats/index"}}
 	<script>
 		WEB_SOCKET_SWF_LOCATION = "/public/WebSocketMain.swf";
 	  $(function() {
